--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
         <tbody>
           <tr>
             <td>list-app</td>
-            <td>simple app to store and share lists created. created using nodejs, mongodb and express framework with
+            <td>simple app to store and share lists created.<br> created using nodejs, mongodb and express framework with
               vue as front end</td>
             <td><a href="https://github.com/reaper6947/list-app">list app</a></td>
           </tr>
           <tr>
             <td>link-app</td>
-            <td>simple app to store and share lists short links of larger links. created using nodejs, mongodb and
+            <td>simple app to store and share lists short links of larger links.<br> created using nodejs, mongodb and
               express framework
               with
               ejs as templating engine</td>
@@ -126,20 +126,20 @@
           </tr>
           <tr>
             <td>chat-app</td>
-            <td>simple app for real time chatting. created using nodejs, socketio, mongodb and express framework with
+            <td>simple app for real time chatting.<br> created using nodejs, socketio, mongodb and express framework with
               ejs as templating engine</td>
             <td><a href="https://github.com/reaper6947/chatApp">chat app</a></td>
           </tr>
           <tr>
             <td>meme-app</td>
-            <td>simple app for searching memes from reddit. created using nodejs, express
+            <td>simple app for searching memes from reddit.<br> created using nodejs, express
               framework with
               ejs as templating engine</td>
             <td><a href="https://github.com/reaper6947/reddit-meme-webpage">chat app</a></td>
           </tr>
           <tr>
             <td>Piazza</td>
-            <td>simple link that links to <a href="https://piazza.com/">piazza</a> page, which is a part of the
+            <td>simple link that links to <a href="https://piazza.com/">piazza</a> page.<br> which is a part of the
               course of CSE391 at <a href="https://www.bracu.ac.bd/">Brac University</a></td>
             <td><a href="https://piazza.com/">Piazza</a></td>
           </tr>
